--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,10 @@ langchain-chroma = "^0.2.1"
 langchain-ollama = "^0.2.3"
 ipykernel = "^6.29.5"
 pandas = "^2.2.3"
-numpy = {version = "==1.26.2", python = ">=3.11,<3.13"}
+numpy = {version = "==1.26.4", python = ">=3.11,<3.13"}
 kagglehub = "^0.3.7"
 seaborn = "^0.13.2"
+langchain = "^0.3.18"
 
 
 [build-system]
