executed a new vector embeddings and saved the data in text_embed_dir

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ kagglehub = "^0.3.7"
 seaborn = "^0.13.2"
 langchain = "^0.3.18"
 transformers = "^4.49.0"
+tensorflow = "2.16.1"
+tf-keras = "2.16.0rc0"
 
 
 [build-system]
