--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "tensorflow (>=2.19.0,<3.0.0)",
     "tensorflow-metal (>=1.2.0,<2.0.0)",
-    "tf-keras (>=2.19.0,<3.0.0)"
+    "tf-keras (>=2.19.0,<3.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)"
 ]
 
 
