--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "tensorflow (>=2.19.0,<3.0.0)",
     "tensorflow-metal (>=1.2.0,<2.0.0)",
     "tf-keras (>=2.19.0,<3.0.0)",
-    "tqdm (>=4.67.1,<5.0.0)"
+    "tqdm (>=4.67.1,<5.0.0)",
+    "streamlit (>=1.43.2,<2.0.0)",
+    "loguru (>=0.7.3,<0.8.0)"
 ]
 
 
