--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,9 @@ dependencies = [
     "tf-keras (>=2.19.0,<3.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
     "streamlit (>=1.43.2,<2.0.0)",
-    "loguru (>=0.7.3,<0.8.0)"
+    "loguru (>=0.7.3,<0.8.0)",
+    "smolagents (>=1.14.0,<2.0.0)",
+    "gradio (>=5.25.2,<6.0.0)"
 ]
 
 
